--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "gatsby": "4.13.0-alpha-image-cdn-telemetry.26",
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-react-helmet": "^5.0.0",
-    "gatsby-plugin-sharp": "^4.0.0",
+    "gatsby-plugin-sharp": "latest",
     "gatsby-source-contentful": "^7.11.0",
     "gatsby-transformer-remark": "^5.0.0",
-    "gatsby-transformer-sharp": "latest",
+    "gatsby-transformer-sharp": "4.0.0",
     "gh-pages": "^3.1.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
